# coco-label-tool

./: .envrc  .gitignore  .sops.yaml  AGENTS.md  AUTO_LABEL_PLAN.md  AUTO_LABEL_SERVER_API.md  DATASET_MANAGER_PLAN.md  FEATURE_PLAN.md  FEATURE_REQUESTS.md  GALLERY_VIEW_PLAN.md  LICENSE.md  MASK_DRAWING_PLAN.md  MOBILE_FRIENDLY_PLAN.md  MODEL_INACTIVITY_PLAN.md  README.md  S3_IMPLEMENTATION_PLAN.md  eslint.config.js  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.yaml  server.py
app/: __init__.py  config.py  helpers.py  models.py  routes.py  s3_state.py  sam2.py  sam3_utils.py  uri_utils.py
coco_label_tool/: __init__.py  server.py  shutdown.py
nix/: aarch64-darwin.nix  common.nix  default.nix  packages.nix  service.nix  shells.nix  transformers.nix  uv2nix.nix  x86_64-darwin.nix  x86_64-linux.nix
scripts/: README.md  check-fix.sh  check.sh  format.sh  lint-fix.sh  lint.sh  run-server-intel-mac.sh  run-server.sh  test.sh
templates/: index.html
tests/: api.test.js  auto-label.test.js  box-drag.test.js  config.test.js  gallery.test.js  keyboard-hints.test.js  modals.test.js  model-selection.test.js  multi-mask-save.test.js  test_annotation_types.py  test_auto_label.py  test_cache.py  test_dataset.py  test_dataset_manager.py  test_exceptions.py  test_gallery_routes.py  test_helpers.py  test_image_resize.py  test_model_manager.py  test_point_formatting.py  test_routes.py  test_s3_state.py  test_sam2.py  test_sam3.py  test_sam3_multi_object_points.py  test_shutdown.py  test_thumbnail_cache.py  test_uri_utils.py  (+1 more)
(+102 files in other folders)
